@@ -1,4 +1,4 @@
-$Id: History,v 1.32 2001-07-13 15:57:00 gcosmo Exp $
+$Id: History,v 1.33 2001-07-15 08:31:30 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,7 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
-
+Jul 15, 2001 
+- Fixed bugs in G4VUserPhysicsList     (Hisaya)
+--- Modify Store/RetreivePhysicsTable for new G4VProcess
+--- Fixed bugs in StoreMaterialInfor and StoreCutValues in binary mode 
+ 
 Jul 13, 2001, G.Cosmo (run-V03-02-00)
 - Cleanup of pedantic warnings in Linux-g++ ANSI setup.
 - Corrected "NULL" to "0".
